# CGBN

./: CMakeLists.txt  Makefile  bigint_256.cuh  cgbn_alt_bn128_g1.cu  cgbn_alt_bn128_g1.cuh  cgbn_alt_bn128_g1.h  cgbn_alt_bn128_g2.cu  cgbn_alt_bn128_g2.cuh  cgbn_alt_bn128_g2.h  cgbn_ect.cuh  cgbn_ect.h  cgbn_fp.cu  cgbn_fp.cuh  cgbn_fp.h  cgbn_fp2.cu  cgbn_fp2.h  cgbn_math.cu  cgbn_math.h  cgbn_mem.h  cgbn_multi_exp.cu  cgbn_multi_exp.cuh  cgbn_multi_exp.h  cgbn_multi_exp_g2.cu  cgbn_multi_exp_g2.h  gpu_support.h  low_func.cu  low_func.cuh  low_func_gpu.cu  low_func_gpu.h  low_prefix_sum2_func.cu  low_prefix_sum_func.cu  math.cu  math.h  test.cpp  test_alt_bn128_g1.cpp  test_sub_wide.cu.c
docs/: Untitled Diagram.drawio
include/cgbn/: cgbn.cu  cgbn.h  cgbn_cuda.h  cgbn_mem.h  cgbn_mpz.h  impl_cuda.cu
include/cgbn/arith/: mp.cu
include/cgbn/core/: core.cu  core_add_sub.cu  core_short_math.cu
samples/sample_01_add/: Makefile  add.cu
samples/sample_02_modinv/: modinv_odd.cu
samples/utility/: cpu_simple_bn_math.h  cpu_support.h  gpu_support.h  support.h
test/: test.cpp  test_add_g2.cu  test_bigint.cu  test_dynamic_parallel.cu  test_fp.cu  test_mcl_g1_add.cu  test_mul.cu  test_mul_cgbn_and_msm.cu  test_mul_ui64.cu  test_sub_wide.cu
test/msm/: asm_cuda.debug.ptx  asm_cuda.h  asm_cuda.release.ptx  blst_377_ops.debug.ptx  blst_377_ops.release.ptx  build.sh  msm.debug.ptx  msm.release.ptx  tests.debug.ptx  types.h
